feat(Application): add candle fetching and logging
- Added methods to fetch candles using `InvestApi` and create a `BarSeries` from them.
- Updated `Application` to use `CandleInterval` instead of `Duration`.
- Updated `BarSeriesCreator` to handle `HistoricCandle` objects and `CandleInterval`.